fixed naming + dashboard draw path

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Sport inovatie Howest",
-  "short_name": "Sport inovatie Howest",
+  "name": "Hogeschool Howest",
+  "short_name": "Howest",
   "icons": [
     {
       "src": "apple-touch-icon.png",
